hooks/templates/rc-aspnet-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rcaspnethelm
  name: rcaspnethelm
  namespace: rc-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcaspnethelm
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rcaspnethelm
    spec:
      containers:
      - image: index.docker.io/rchandnani0615/argocdaspnet:thirdtry
        name: rcaspnethelm
        resources: {}
---
