hooks/templates/rc-aspnet-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: rcaspnethelm
  name: rcaspnethelm
  namespace: rc-namespace
spec:
  host: "rcaspnethelm-rc-namespace.apps.srpoc.silkroad-eng.local"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rcaspnethelm
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
